--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,22 @@ h1 {
   text-align: center;
 }
 
+.container {
+  background-color: rgb(255, 255, 255);
+  padding: 10px 0;
+}
+
 .marker {
   width: 200px;
   height: 25px;
-  background-color: red;
-  margin: auto;
+  margin: 10px auto;
+}
+
+.one {
+  background-color: rgb(255, 127, 0);
+}
+
+
+.two {
+  background-color: rgb(0, 255, 255);
 }
