--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,13 @@ h1 {
   margin: 10px auto;
 }
 
-.one {
-  background-color: rgb(255, 127, 0);
+.red {
+  background: linear-gradient(180deg, rgb(255, 0, 0) 75%, rgb(0, 255, 0), rgb(0, 0, 255));
+}
+.green {
+  background-color: #007F00;
 }
 
-
-.two {
-  background-color: rgb(0, 255, 255);
+.blue {
+  background-color: hsl(240, 100%, 50%);
 }
